--- a/src/Home.css
+++ b/src/Home.css
@@ -15,6 +15,7 @@
 
 .home__image {
   width: 100%;
+  height: 100%;
   z-index: -1;
   margin-bottom: -150px;
   mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
